Fixed Too Wide Background Image

--- a/_sass/_new.scss
+++ b/_sass/_new.scss
@@ -80,10 +80,10 @@ nav {
     background-color: #CA6161;
     background-image: url(../images/background.jpg);
     background-size: cover;
+    overflow-x: hidden;
     background-repeat: no-repeat;
     width: 100%;
-    min-width: 600px;
-    height: 600px;
+    min-height: 700px;
     // padding-top: 66.64%; /* (img-height / img-width * container-width) */
     //             /* (853 / 1280 * 100) */
 }
